--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,14 +1,16 @@
-@import "./base.css";
+/* @import "./base.css"; */
 
 #app {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-
   font-weight: normal;
+  height: 100vh;
 }
-
-a,
+main{
+  height: 100%;
+}
+/* a,
 .green {
   text-decoration: none;
   color: hsla(160, 100%, 37%, 1);
@@ -31,5 +33,5 @@ a,
     display: grid;
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
-  }
-}
+  } */
+/* } */
